Fix reply + multiline scrolled text overlap bug

--- a/widget/DefaultWidget/styles/ChatTextarea.scss
+++ b/widget/DefaultWidget/styles/ChatTextarea.scss
@@ -39,6 +39,8 @@
   margin: 18px 0 -8px 30px;
   position: relative;
   z-index: 1;
+  background: $color-white;
+  box-shadow: -2px 10px 3px $color-white;
 }
 
 .elixirchat-chat-textarea__reply-to-text {
